// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading adapter can be constructed WITH attributes 1`] = `
Object {
  "modelState": Object {
    "align": "left",
    "headingLevel": "2",
    "textGroup": TextGroup {
      "dataTemplate": Object {
        "align": "left",
        "indent": 0,
      },
      "items": Array [
        TextGroupItem {
          "data": Object {
            "align": "left",
            "indent": 0,
          },
          "parent": [Circular],
          "text": StyleableText {
            "styleList": ChunkStyleList {
              "styles": Array [],
            },
            "value": "example text",
          },
        },
      ],
      "maxItems": 1,
    },
  },
}
`;

exports[`Heading adapter can be constructed WITHOUT attributes 1`] = `
Object {
  "modelState": Object {
    "align": "left",
    "headingLevel": 1,
    "textGroup": TextGroup {
      "dataTemplate": Object {
        "align": "left",
        "indent": 0,
      },
      "items": Array [
        TextGroupItem {
          "data": Object {
            "align": "left",
            "indent": 0,
          },
          "parent": [Circular],
          "text": StyleableText {
            "styleList": ChunkStyleList {
              "styles": Array [],
            },
            "value": "",
          },
        },
      ],
      "maxItems": 1,
    },
  },
}
`;

exports[`Heading adapter can covert to JSON 1`] = `
Object {
  "content": Object {
    "align": "left",
    "headingLevel": "2",
    "textGroup": Array [
      Object {
        "data": Object {
          "align": "left",
          "indent": 0,
        },
        "text": Object {
          "styleList": null,
          "value": "example text",
        },
      },
    ],
  },
}
`;
